Steven Chamberlain
Thom Johansen
Thibault LeMeur
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille

---------------------------
  Jackdmp changes log
---------------------------

2010-03-24 Stephane Letz  <letz@grame.fr>

	* On Windows, now use TRE library for regexp (BSD license instead of GPL license).

2010-03-19 Stephane Letz  <letz@grame.fr>

	* Fix some file header to have library side code use LGPL.
	* Apply srcfactor.diff patch for ticket #162.

2010-03-06 Stephane Letz  <letz@grame.fr>

	* Arnold Krille firewire patch.
	* Raise JACK_DRIVER_PARAM_STRING_MAX and JACK_PARAM_STRING_MAX to 127 otherwise some audio drivers cannot be loaded on OSX.

2010-03-04 Stephane Letz  <letz@grame.fr>

	* Correct JackMachServerChannel::Execute : keep running even in error cases.
	* Raise JACK_PROTOCOL_VERSION number.

2010-03-03 Stephane Letz  <letz@grame.fr>

	* Correct JackGraphManager::DeactivatePort.

2010-03-02 Stephane Letz  <letz@grame.fr>

	* Improve JackCoreAudioDriver and JackCoreAudioAdapter : when no devices are described, takes default input and output and aggregate them.

2010-02-15 Stephane Letz  <letz@grame.fr>

	* Version 1.9.6 started.

2010-01-29 Gabriel M. Beddingfield <gabriel@teuton.org>

	* Change JackEngineProfiling and JackAudioAdapterInterface gnuplot scripts to output SVG instead of PDF.

2009-12-15 Stephane Letz  <letz@grame.fr>

	* Shared memory manager was calling abort in case of fatal error, now return an error in caller.

2009-12-13 Stephane Letz  <letz@grame.fr>

	* Mario Lang alsa_io time calculation overflow patch.

2009-12-10 Stephane Letz  <letz@grame.fr>

	* Use a QUIT notification to properly quit the server channel, the server channel thread can then be 'stopped' instead of 'canceled'.
