@@ -30,6 +30,10 @@ Arnold Krille
   Jackdmp changes log
 ---------------------------
 
+2010-03-26 Stephane Letz  <letz@grame.fr>
+
+	* ffado-portname-sync.patch from ticket #163 applied.
+
 2010-03-24 Stephane Letz  <letz@grame.fr>
 
 	* On Windows, now use TRE library for regexp (BSD license instead of GPL license).
